--- a/RainOrShine/Base.lproj/Main.storyboard
+++ b/RainOrShine/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                     <constraint firstAttribute="height" constant="199" id="4IV-2i-FlV"/>
                                     <constraint firstAttribute="width" constant="136" id="ocS-Mu-78b"/>
                                 </constraints>
-                                <blurEffect style="light"/>
+                                <blurEffect style="dark"/>
                             </visualEffectView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVM-ae-RWw">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
@@ -66,7 +66,7 @@
                                     <constraint firstAttribute="width" constant="136" id="YyD-B2-Dh2"/>
                                     <constraint firstAttribute="height" constant="102" id="o3r-OY-Dj2"/>
                                 </constraints>
-                                <blurEffect style="light"/>
+                                <blurEffect style="dark"/>
                             </visualEffectView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="2co-iD-gnC">
                                 <rect key="frame" x="177" y="324" width="20" height="20"/>
@@ -81,7 +81,7 @@
                                     <constraint firstAttribute="width" constant="240" id="Kin-NG-ZUD"/>
                                     <constraint firstAttribute="height" constant="58" id="afr-ym-Va4"/>
                                 </constraints>
-                                <blurEffect style="light"/>
+                                <blurEffect style="dark"/>
                             </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
